# oscar

./: .gitignore  .gitmodules  README.md  README_ANEC  README_ANEC.md  README_KR.md  cmd_arming.sh  collect_data_fusion.sh  collect_data_rover.sh  make_video.sh  offboard_mode.sh  setup.bash  start_fusion.sh  start_rover.sh  start_rover_withSLAM.sh  teleop_rover.sh
catkin_ws/src/: README.md  run_neural2.py
catkin_ws/src/fusion/robot_description/: CMakeLists.txt  package.xml
catkin_ws/src/fusion/robot_description/meshes/bolt/: SPEED_20.dae  body.dae
catkin_ws/src/fusion/robot_description/meshes/fusion/: body.mtl
catkin_ws/src/fusion/robot_description/urdf/: fusion.urdf
config/: README.md  config.yaml
config/conda/: ANEC_env.yaml  environment.yaml
config/data_collection/: fusion_jaerock_jaerock2.yaml  fusion_kdh_jaerock3.yaml  fusion_template.yaml  rover_template.yaml
config/neural_net/: config.yaml  fusion_bada.yaml  fusion_bada_jaerock2.yaml  fusion_bada_lstm.yaml  (+15 more)
neural_net/: calc_dist.py  config.py  const.py  convert_csv.py  data_augmentation.py  drive_data.py  drive_data2.py  drive_log.py  drive_run.py  drive_test.py  drive_train.py  drive_train_anec.py  drive_view.py  driving_performance_comparison_sm.ipynb  eval_metric.py  gpu_options.py  image_converter.py  image_crop.py  image_process.py  log.py  move_gazebo_world.py  net_model.py  net_model_resnet.py  net_visualization.py  rebuild_csv.py  rebuild_csv2.py  salient.py  test.py  test_data.py  test_fps.py  test_run.py  test_saliency.py  test_salient_features.py  train.py  train_anec.py  view_data.py
(+226 files in other folders)
