<package format="2">
  <name>robot_description</name>
  <version>0.0.1</version>
  <description>
  Provides a URDF for Ford Fusion
  </description>
  <maintainer email="jrkwon@umich.edu">shane loretz</maintainer>
  <license>APACHE 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
</package>
